# lpil-gerby-configuration

./: Readme.md  pyproject.toml
docs/: Readme.md
lpilGerbyConfig/: config.py
scripts/: pushChanges
